--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,20 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>aliyun-java-sdk-core</artifactId>
+			<version>3.2.3</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/libs/aliyun-java-sdk-core-3.2.3.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>aliyun-java-sdk-dysmsapi</artifactId>
+			<version>1.0.0-SANPSHOT</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/libs/aliyun-java-sdk-dysmsapi-1.0.0-SANPSHOT.jar</systemPath>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
